--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "author": "Austin Green",
   "dependencies": {
     "bulma": "^0.9.0",
-    "gatsby": "^4.0.0",
+    "gatsby": "^4.25.8",
+    "gatsby-plugin-anchor-links": "^1.2.1",
     "gatsby-plugin-image": "^2.0.0",
     "gatsby-plugin-netlify": "^5.0.0",
     "gatsby-plugin-netlify-cms": "^6.0.0",
@@ -28,6 +29,7 @@
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-helmet": "^6.0.0",
+    "react-icons": "^4.12.0",
     "sass": "^1.43.2",
     "uuid": "^8.0.0"
   },
@@ -46,7 +48,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
-    "prettier": "^2.0.5"
+    "prettier": "^2.0.5",
+    "tailwindcss": "^3.4.0"
   },
   "engines": {
     "node": ">= 14.15.0"
