--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "Austin Green",
   "dependencies": {
     "bulma": "^0.9.0",
-    "firebase": "^10.7.1",
+    "firebase": "^10.5.2",
     "gatsby": "^4.25.8",
     "gatsby-plugin-anchor-links": "^1.2.1",
     "gatsby-plugin-image": "^2.0.0",
@@ -31,6 +31,7 @@
     "react-dom": "^17.0.0",
     "react-helmet": "^6.0.0",
     "react-icons": "^4.12.0",
+    "react-markdown": "^8.0.7",
     "sass": "^1.43.2",
     "uuid": "^8.0.0"
   },
