--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "netlify-cms-media-library-cloudinary": "^1.3.10",
     "netlify-cms-media-library-uploadcare": "^0.5.10",
     "prop-types": "^15.6.0",
+    "puppeteer": "^21.3.7",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-helmet": "^6.0.0",
