--- a/package.json
+++ b/package.json
@@ -1,61 +1,60 @@
 {
-  "name": "gatsby-starter-netlify-cms",
-  "description": "Example Gatsby, and Netlify CMS project",
-  "version": "1.1.3",
-  "author": "Austin Green",
-  "dependencies": {
-    "bulma": "^0.9.0",
-    "firebase": "^10.7.1",
-    "gatsby": "^4.25.8",
-    "gatsby-plugin-anchor-links": "^1.2.1",
-    "gatsby-plugin-firebase-v9.0": "^1.0.3",
-    "gatsby-plugin-image": "^2.0.0",
-    "gatsby-plugin-netlify": "^5.0.0",
-    "gatsby-plugin-netlify-cms": "^6.0.0",
-    "gatsby-plugin-purgecss": "^6.0.0",
-    "gatsby-plugin-react-helmet": "^5.0.0",
-    "gatsby-plugin-sass": "^5.0.0",
-    "gatsby-plugin-sharp": "^4.0.0",
-    "gatsby-remark-copy-linked-files": "^5.0.0",
-    "gatsby-remark-images": "^6.0.0",
-    "gatsby-remark-relative-images": "^0.3.0",
-    "gatsby-source-filesystem": "^4.0.0",
-    "gatsby-transformer-remark": "^5.0.0",
-    "gatsby-transformer-sharp": "^4.0.0",
-    "lodash": "^4.17.15",
-    "lodash-webpack-plugin": "^0.11.4",
-    "netlify-cms-app": "^2.15.65",
-    "netlify-cms-media-library-cloudinary": "^1.3.10",
-    "netlify-cms-media-library-uploadcare": "^0.5.10",
-    "prop-types": "^15.6.0",
-    "puppeteer": "^21.3.7",
-    "react": "^17.0.0",
-    "react-dom": "^17.0.0",
-    "react-helmet": "^6.0.0",
-    "react-icons": "^4.12.0",
-    "react-markdown": "^8.0.7",
-    "sass": "^1.43.2",
-    "uuid": "^8.0.0"
-  },
-  "keywords": [
-    "gatsby"
-  ],
-  "license": "MIT",
-  "main": "n/a",
-  "scripts": {
-    "clean": "gatsby clean",
-    "start": "npm run develop",
-    "build": "npm run clean && gatsby build",
-    "develop": "npm run clean && gatsby develop",
-    "serve": "gatsby serve",
-    "format": "prettier --trailing-comma es5 --no-semi --single-quote --write \"{gatsby-*.js,src/**/*.js}\"",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "devDependencies": {
-    "prettier": "^2.0.5",
-    "tailwindcss": "^3.4.0"
-  },
-  "engines": {
-    "node": ">= 14.15.0"
-  }
+	"name": "gatsby-starter-netlify-cms",
+	"description": "Example Gatsby, and Netlify CMS project",
+	"version": "1.1.3",
+	"author": "Austin Green",
+	"dependencies": {
+		"bulma": "^0.9.0",
+		"firebase": "^10.7.1",
+		"gatsby": "^4.25.8",
+		"gatsby-plugin-anchor-links": "^1.2.1",
+		"gatsby-plugin-image": "^2.0.0",
+		"gatsby-plugin-netlify": "^5.0.0",
+		"gatsby-plugin-netlify-cms": "^6.0.0",
+		"gatsby-plugin-purgecss": "^6.0.0",
+		"gatsby-plugin-react-helmet": "^5.0.0",
+		"gatsby-plugin-sass": "^5.0.0",
+		"gatsby-plugin-sharp": "^4.0.0",
+		"gatsby-remark-copy-linked-files": "^5.0.0",
+		"gatsby-remark-images": "^6.0.0",
+		"gatsby-remark-relative-images": "^0.3.0",
+		"gatsby-source-filesystem": "^4.0.0",
+		"gatsby-transformer-remark": "^5.0.0",
+		"gatsby-transformer-sharp": "^4.0.0",
+		"lodash": "^4.17.15",
+		"lodash-webpack-plugin": "^0.11.4",
+		"netlify-cms-app": "^2.15.65",
+		"netlify-cms-media-library-cloudinary": "^1.3.10",
+		"netlify-cms-media-library-uploadcare": "^0.5.10",
+		"prop-types": "^15.6.0",
+		"react": "^17.0.0",
+		"react-dom": "^17.0.0",
+		"react-helmet": "^6.0.0",
+		"react-icons": "^4.12.0",
+		"sass": "^1.43.2",
+		"uuid": "^8.0.0"
+	},
+	"keywords": [
+		"gatsby"
+	],
+	"license": "MIT",
+	"main": "n/a",
+	"scripts": {
+		"clean": "gatsby clean",
+		"start": "npm run develop",
+		"build": "npm run clean && gatsby build",
+		"develop": "npm run clean && gatsby develop",
+		"serve": "gatsby serve",
+		"format": "prettier --trailing-comma es5 --no-semi --single-quote --write \"{gatsby-*.js,src/**/*.js}\"",
+		"test": "echo \"Error: no test specified\" && exit 1"
+	},
+	"devDependencies": {
+		"prettier": "^2.0.5",
+		"tailwindcss": "^3.4.0",
+		"webpack": "^5.89.0",
+		"webpack-cli": "^5.1.4"
+	},
+	"engines": {
+		"node": ">= 14.15.0"
+	}
 }
