--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
 	"version": "1.1.3",
 	"author": "Austin Green",
 	"dependencies": {
+		"@auth0/auth0-react": "^2.2.4",
 		"bulma": "^0.9.0",
-		"firebase": "^10.7.1",
 		"gatsby": "^4.25.8",
 		"gatsby-plugin-anchor-links": "^1.2.1",
 		"gatsby-plugin-image": "^2.0.0",
