--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"react-dom": "^17.0.0",
 		"react-helmet": "^6.0.0",
 		"react-icons": "^4.12.0",
+		"react-swipeable": "^7.0.1",
 		"sass": "^1.43.2",
 		"uuid": "^8.0.0"
 	},
