Connects homepage to CDN

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -2,244 +2,179 @@ backend:
   name: git-gateway
   branch: master
   commit_messages:
-    create: "Create {{collection}} “{{slug}}”"
-    update: "Update {{collection}} “{{slug}}”"
-    delete: "Delete {{collection}} “{{slug}}”"
-    uploadMedia: "[skip ci] Upload “{{path}}”"
-    deleteMedia: "[skip ci] Delete “{{path}}”"
+    create: 'Create {{collection}} “{{slug}}”'
+    update: 'Update {{collection}} “{{slug}}”'
+    delete: 'Delete {{collection}} “{{slug}}”'
+    uploadMedia: '[skip ci] Upload “{{path}}”'
+    deleteMedia: '[skip ci] Delete “{{path}}”'
 
 local_backend: true
 media_folder: static/img
 public_folder: /img
 
 collections:
-  - name: "blog"
-    label: "Blog"
-    folder: "src/pages/blog"
+  - name: 'blog'
+    label: 'Blog'
+    folder: 'src/pages/blog'
     create: true
-    slug: "{{year}}-{{month}}-{{day}}-{{slug}}"
+    slug: '{{year}}-{{month}}-{{day}}-{{slug}}'
     fields:
-      - {
-          label: "Template Key",
-          name: "templateKey",
-          widget: "hidden",
-          default: "blog-post",
-        }
-      - { label: "Title", name: "title", widget: "string" }
-      - { label: "Publish Date", name: "date", widget: "datetime" }
-      - { label: "Description", name: "description", widget: "text" }
-      - { label: "Featured Post", name: "featuredpost", widget: "boolean" }
-      - { label: "Featured Image", name: "featuredimage", widget: image }
-      - { label: "Body", name: "body", widget: "markdown" }
-      - { label: "Tags", name: "tags", widget: "list" }
+      - { label: 'Template Key', name: 'templateKey', widget: 'hidden', default: 'blog-post' }
+      - { label: 'Title', name: 'title', widget: 'string' }
+      - { label: 'Publish Date', name: 'date', widget: 'datetime' }
+      - { label: 'Description', name: 'description', widget: 'text' }
+      - { label: 'Featured Post', name: 'featuredpost', widget: 'boolean' }
+      - { label: 'Featured Image', name: 'featuredimage', widget: image }
+      - { label: 'Body', name: 'body', widget: 'markdown' }
+      - { label: 'Tags', name: 'tags', widget: 'list' }
 
-  - name: "pages"
-    label: "Pages"
+  - label: 'Videos'
+    name: 'videos'
+    folder: 'src/pages/videos'
+    create: true
+    slug: '{{year}}-{{month}}-{{day}}-{{slug}}'
+    fields:
+      - { label: 'Title', name: 'title', widget: 'string' }
+      - { label: 'Publish Date', name: 'date', widget: 'datetime' }
+      - { label: 'Description', name: 'description', widget: 'text' }
+      - { label: 'Video File', name: 'videofile', widget: 'file' }
+      - { label: 'Video URL', name: 'videoURL', widget: 'string', required: false }
+
+  - name: 'pages'
+    label: 'Pages'
     files:
-      - file: "src/pages/index.md"
-        label: "Landing Page"
-        name: "index"
+      - file: 'src/pages/index.md'
+        label: 'Homepage'
+        name: 'index'
         fields:
+          - { label: 'Template Key', name: 'templateKey', widget: 'hidden', default: 'index-page' }
           - {
-              label: "Template Key",
-              name: "templateKey",
-              widget: "hidden",
-              default: "index-page",
-            }
-          - { label: Title, name: title, widget: string }
-          - { label: Image, name: image, widget: image }
-          - { label: Heading, name: heading, widget: string }
-          - { label: Subheading, name: subheading, widget: string }
-          - {
-              label: Mainpitch,
-              name: mainpitch,
+              label: Hero Section,
+              name: hero,
               widget: object,
               fields:
                 [
-                  { label: Title, name: title, widget: string },
-                  { label: Description, name: description, widget: text },
+                  { label: Header, name: header, widget: string },
+                  { label: Subtext, name: subtext, widget: string },
                 ],
             }
-          - { label: Description, name: description, widget: string }
           - {
-              label: Intro,
-              name: intro,
+              label: Who We Are Section,
+              name: whoWeAre,
               widget: object,
               fields:
                 [
-                  { label: Heading, name: heading, widget: string },
-                  { label: Description, name: description, widget: text },
+                  { label: Header, name: header, widget: string },
+                  { label: Subtext, name: subtext, widget: string },
+                  { label: Body, name: body, widget: text },
+                ],
+            }
+          - {
+              label: Team Section,
+              name: team,
+              widget: object,
+              fields:
+                [
+                  { label: Header, name: header, widget: string },
+                  { label: Subtext, name: subtext, widget: string },
                   {
-                    label: Blurbs,
-                    name: blurbs,
+                    label: Team Members,
+                    name: members,
                     widget: list,
                     fields:
                       [
-                        { label: Image, name: image, widget: image },
-                        { label: Text, name: text, widget: text },
-                      ],
-                  },
-                ],
-            }
-          - {
-              label: Main,
-              name: main,
-              widget: object,
-              fields:
-                [
-                  { label: Heading, name: heading, widget: string },
-                  { label: Description, name: description, widget: text },
-                  {
-                    label: Image1,
-                    name: image1,
-                    widget: object,
-                    fields:
-                      [
-                        { label: Image, name: image, widget: image },
-                        { label: Alt, name: alt, widget: string },
-                      ],
-                  },
-                  {
-                    label: Image2,
-                    name: image2,
-                    widget: object,
-                    fields:
-                      [
-                        { label: Image, name: image, widget: image },
-                        { label: Alt, name: alt, widget: string },
-                      ],
-                  },
-                  {
-                    label: Image3,
-                    name: image3,
-                    widget: object,
-                    fields:
-                      [
-                        { label: Image, name: image, widget: image },
-                        { label: Alt, name: alt, widget: string },
-                      ],
-                  },
-                ],
-            }
-      - file: "src/pages/about/index.md"
-        label: "About"
-        name: "about"
-        fields:
-          - {
-              label: "Template Key",
-              name: "templateKey",
-              widget: "hidden",
-              default: "about-page",
-            }
-          - { label: "Title", name: "title", widget: "string" }
-          - { label: "Body", name: "body", widget: "markdown" }
-      - file: "src/pages/products/index.md"
-        label: "Products Page"
-        name: "products"
-        fields:
-          - {
-              label: "Template Key",
-              name: "templateKey",
-              widget: "hidden",
-              default: "product-page",
-            }
-          - { label: Title, name: title, widget: string }
-          - { label: Image, name: image, widget: image }
-          - { label: Heading, name: heading, widget: string }
-          - { label: Description, name: description, widget: string }
-          - {
-              label: Intro,
-              name: intro,
-              widget: object,
-              fields:
-                [
-                  { label: Heading, name: heading, widget: string },
-                  { label: Description, name: description, widget: text },
-                  {
-                    label: Blurbs,
-                    name: blurbs,
-                    widget: list,
-                    fields:
-                      [
-                        { label: Image, name: image, widget: image },
-                        { label: Text, name: text, widget: text },
-                      ],
-                  },
-                ],
-            }
-          - {
-              label: Main,
-              name: main,
-              widget: object,
-              fields:
-                [
-                  { label: Heading, name: heading, widget: string },
-                  { label: Description, name: description, widget: text },
-                  {
-                    label: Image1,
-                    name: image1,
-                    widget: object,
-                    fields:
-                      [
-                        { label: Image, name: image, widget: image },
-                        { label: Alt, name: alt, widget: string },
-                      ],
-                  },
-                  {
-                    label: Image2,
-                    name: image2,
-                    widget: object,
-                    fields:
-                      [
-                        { label: Image, name: image, widget: image },
-                        { label: Alt, name: alt, widget: string },
-                      ],
-                  },
-                  {
-                    label: Image3,
-                    name: image3,
-                    widget: object,
-                    fields:
-                      [
-                        { label: Image, name: image, widget: image },
-                        { label: Alt, name: alt, widget: string },
-                      ],
-                  },
-                ],
-            }
-          - {
-              label: Testimonials,
-              name: testimonials,
-              widget: list,
-              fields:
-                [
-                  { label: Quote, name: quote, widget: string },
-                  { label: Author, name: author, widget: string },
-                ],
-            }
-          - { label: Full_image, name: full_image, widget: image }
-          - {
-              label: Pricing,
-              name: pricing,
-              widget: object,
-              fields:
-                [
-                  { label: Heading, name: heading, widget: string },
-                  { label: Description, name: description, widget: string },
-                  {
-                    label: Plans,
-                    name: plans,
-                    widget: list,
-                    fields:
-                      [
-                        { label: Plan, name: plan, widget: string },
-                        { label: Price, name: price, widget: string },
+                        { label: 'Member Name', name: 'name', widget: 'string' },
+                        { label: 'Member Position', name: 'position', widget: 'string' },
+                        { label: 'Career Background', name: 'careerBackground', widget: 'text' },
+                        { label: 'Specialities', name: 'specialities', widget: 'text' },
                         {
-                          label: Description,
-                          name: description,
-                          widget: string,
+                          label: 'Industry Experience',
+                          name: 'industryExperience',
+                          widget: 'text',
                         },
-                        { label: Items, name: items, widget: list },
+                        { label: 'Certifications', name: 'certifications', widget: 'text' },
+                        { label: 'Education', name: 'education', widget: 'text' },
+                      ],
+                  },
+                ],
+            }
+          - {
+              label: Core Values Section,
+              name: coreValues,
+              widget: object,
+              fields:
+                [
+                  { label: Header, name: header, widget: string },
+                  { label: Subtext, name: subtext, widget: string },
+                  { label: Body, name: body, widget: text },
+                  {
+                    label: Values,
+                    name: values,
+                    widget: list,
+                    field: { label: Name, name: name, widget: string },
+                  },
+                ],
+            }
+          - {
+              label: Worked With Section,
+              name: workedWith,
+              widget: object,
+              fields:
+                [
+                  { label: Header, name: header, widget: string },
+                  { label: Subtext, name: subtext, widget: string },
+                  {
+                    label: Testimonials,
+                    name: testimonials,
+                    widget: list,
+                    fields:
+                      [
+                        { label: Quote, name: quote, widget: text },
+                        { label: Name, name: name, widget: string },
+                        { label: Company, name: company, widget: string },
+                      ],
+                  },
+                ],
+            }
+          - {
+              label: Services Section,
+              name: services,
+              widget: object,
+              fields:
+                [
+                  { label: Header, name: header, widget: string },
+                  { label: Subtext, name: subtext, widget: string },
+                  { label: Body, name: body, widget: text },
+                  {
+                    label: Services,
+                    name: services,
+                    widget: list,
+                    fields:
+                      [
+                        { label: 'Service Name', name: 'name', widget: 'string' },
+                        { label: 'Service Pitch', name: 'pitch', widget: 'string' },
+                        { label: 'Service Description', name: 'description', widget: 'text' },
+                      ],
+                  },
+                ],
+            }
+          - {
+              label: Get Started Section,
+              name: getStarted,
+              widget: object,
+              fields:
+                [
+                  { label: Header, name: header, widget: string },
+                  { label: Subtext, name: subtext, widget: string },
+                  {
+                    label: Steps,
+                    name: steps,
+                    widget: list,
+                    max: 3,
+                    fields:
+                      [
+                        { label: 'Step Name', name: 'name', widget: 'string' },
+                        { label: 'Step Explanation', name: 'explanation', widget: 'text' },
                       ],
                   },
                 ],
