--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -66,7 +66,7 @@ collections:
                 [
                   { label: Header, name: header, widget: string },
                   { label: Subtext, name: subtext, widget: string },
-                  { label: Body, name: body, widget: text },
+                  { label: Body, name: body, widget: markdown },
                 ],
             }
           - {
@@ -106,7 +106,7 @@ collections:
                 [
                   { label: Header, name: header, widget: string },
                   { label: Subtext, name: subtext, widget: string },
-                  { label: Body, name: body, widget: text },
+                  { label: Body, name: body, widget: markdown },
                   {
                     label: Values,
                     name: values,
@@ -144,7 +144,7 @@ collections:
                 [
                   { label: Header, name: header, widget: string },
                   { label: Subtext, name: subtext, widget: string },
-                  { label: Body, name: body, widget: text },
+                  { label: Body, name: body, widget: markdown },
                   {
                     label: Services,
                     name: services,
