--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
 	"version": "1.1.3",
 	"author": "Austin Green",
 	"dependencies": {
-		"@auth0/auth0-react": "^2.2.4",
 		"bulma": "^0.9.0",
 		"gatsby": "^4.25.8",
 		"gatsby-plugin-anchor-links": "^1.2.1",
@@ -33,6 +32,7 @@
 		"react-icons": "^4.12.0",
 		"react-swipeable": "^7.0.1",
 		"sass": "^1.43.2",
+		"supertokens-auth-react": "^0.36.1",
 		"uuid": "^8.0.0"
 	},
 	"keywords": [
