--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -20,10 +20,10 @@ collections:
     slug: '{{year}}-{{month}}-{{day}}-{{slug}}'
     fields:
       - { label: 'Template Key', name: 'templateKey', widget: 'hidden', default: 'blog-post' }
+      - { label: 'Featured Post', name: 'featuredpost', widget: 'boolean' }
       - { label: 'Title', name: 'title', widget: 'string' }
       - { label: 'Publish Date', name: 'date', widget: 'datetime' }
       - { label: 'Description', name: 'description', widget: 'text' }
-      - { label: 'Featured Post', name: 'featuredpost', widget: 'boolean' }
       - { label: 'Image', name: 'image', widget: image, required: false }
       - { label: 'Body', name: 'body', widget: 'markdown' }
       - {
@@ -40,15 +40,67 @@ collections:
     slug: '{{year}}-{{month}}-{{day}}-{{slug}}'
     fields:
       - { label: 'Template Key', name: 'templateKey', widget: 'hidden', default: 'video-post' }
-      - { label: 'Title', name: 'title', widget: 'string' }
-      - { label: 'Publish Date', name: 'date', widget: 'datetime' }
-      - { label: 'Description', name: 'description', widget: 'text' }
       - {
           label: 'Video URL',
           name: 'videoURL',
           widget: 'string',
           required: true,
-          hint: 'Enter video URL (e.g., YouTube, Vimeo)',
+          hint: '★ Enter video URL (e.g., YouTube, Vimeo) ★',
+        }
+      - { label: 'Featured Video', name: 'featuredpost', widget: 'boolean' }
+      - { label: 'Title', name: 'title', widget: 'string', required: true }
+      - { label: 'Publish Date', name: 'date', widget: 'datetime', required: true }
+      - { label: 'Description', name: 'description', widget: 'text', required: false }
+      - {
+          label: 'Presentors',
+          name: 'presentors',
+          widget: 'list',
+          field: { label: 'Presentor Name', name: 'name', widget: 'string' },
+          required: false,
+        }
+
+  - label: 'Webinars'
+    name: 'webinars'
+    folder: 'src/pages/resources/webinars'
+    create: true
+    slug: '{{year}}-{{month}}-{{day}}-{{slug}}'
+    fields:
+      - { label: 'Template Key', name: 'templateKey', widget: 'hidden', default: 'webinar-post' }
+      - {
+          label: 'Video URL',
+          name: 'videoURL',
+          widget: 'string',
+          required: true,
+          hint: '★ Enter video URL (e.g., YouTube, Vimeo) ★',
+        }
+      - { label: 'Featured Video', name: 'featuredpost', widget: 'boolean' }
+      - {
+          label: 'Title',
+          name: 'title',
+          widget: 'string',
+          required: true,
+          hint: 'If nothing is entered, it will attempt to automatically fetch the URLs title.',
+        }
+      - {
+          label: 'Publish Date',
+          name: 'date',
+          widget: 'datetime',
+          required: true,
+          hint: 'If nothing entered, it will attempt to automatically fetch the URLs publish date.',
+        }
+      - {
+          label: 'Description',
+          name: 'description',
+          widget: 'text',
+          required: false,
+          hint: 'If nothing is entered, it will attempt to automatically fetch the URLs description.',
+        }
+      - {
+          label: 'Presentors',
+          name: 'presentors',
+          widget: 'list',
+          field: { label: 'Presentor Name', name: 'name', widget: 'string' },
+          required: false,
         }
 
   - name: 'pages'
