--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
 	"author": "Austin Green",
 	"dependencies": {
 		"bulma": "^0.9.0",
+		"firebase": "^10.8.0",
 		"gatsby": "^4.25.8",
 		"gatsby-plugin-anchor-links": "^1.2.1",
+		"gatsby-plugin-firebase-v9.0": "^1.0.3",
 		"gatsby-plugin-image": "^2.0.0",
 		"gatsby-plugin-netlify": "^5.0.0",
 		"gatsby-plugin-netlify-cms": "^6.0.0",
