--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
 	"author": "Austin Green",
 	"dependencies": {
 		"bulma": "^0.9.0",
+		"diagnostics_channel": "^1.1.0",
 		"events": "^3.3.0",
 		"firebase": "^10.8.0",
 		"gatsby": "^4.25.8",
