--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
 	"version": "1.1.3",
 	"author": "Austin Green",
 	"dependencies": {
+		"@sendgrid/mail": "^8.1.1",
 		"bulma": "^0.9.0",
 		"diagnostics_channel": "^1.1.0",
 		"events": "^3.3.0",
