--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 		"prop-types": "^15.6.0",
 		"react": "^17.0.0",
 		"react-dom": "^17.0.0",
+		"react-google-recaptcha": "^3.1.0",
 		"react-helmet": "^6.0.0",
 		"react-icons": "^4.12.0",
 		"react-swipeable": "^7.0.1",
