--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-	"name": "gatsby-starter-netlify-cms",
-	"description": "Example Gatsby, and Netlify CMS project",
+	"name": "Positive Professionals Website",
+	"description": "",
 	"version": "1.1.3",
-	"author": "Austin Green",
+	"author": "Nathaniel Brooks",
 	"dependencies": {
 		"@sendgrid/mail": "^8.1.1",
 		"bulma": "^0.9.0",
