--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
   publish = "public"
-  command = "npm run build"
+  command = "gatsby build"
 [build.environment]
   NODE_VERSION = "19.8.1"
   YARN_VERSION = "1.22.4"
