--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "Positive Professionals Website",
+	"name": "Positive-Professionals-Website",
 	"description": "",
 	"version": "1.1.3",
 	"author": "Nathaniel Brooks",
@@ -26,6 +26,7 @@
 		"gatsby-source-filesystem": "^4.0.0",
 		"gatsby-transformer-remark": "^5.0.0",
 		"gatsby-transformer-sharp": "^4.0.0",
+		"lmdb-win32-x64": "^2.3.10",
 		"lodash": "^4.17.15",
 		"lodash-webpack-plugin": "^0.11.4",
 		"marked": "^13.0.2",
