--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "Positive-Professionals-Website",
+	"name": "positive-professionals",
 	"description": "",
 	"version": "1.1.3",
 	"author": "Nathaniel Brooks",
@@ -26,7 +26,6 @@
 		"gatsby-source-filesystem": "^4.0.0",
 		"gatsby-transformer-remark": "^5.0.0",
 		"gatsby-transformer-sharp": "^4.0.0",
-		"lmdb-win32-x64": "^2.3.10",
 		"lodash": "^4.17.15",
 		"lodash-webpack-plugin": "^0.11.4",
 		"marked": "^13.0.2",
@@ -57,8 +56,7 @@
 		"develop": "npm run clean && gatsby develop",
 		"serve": "gatsby serve",
 		"format": "prettier --trailing-comma es5 --no-semi --single-quote --write \"{gatsby-*.js,src/**/*.js}\"",
-		"test": "echo \"Error: no test specified\" && exit 1",
-		"postinstall": "npm install lmdb-win32-x64 --force --target_platform=win32 --target_arch=x64"
+		"test": "echo \"Error: no test specified\" && exit 1"
 	},
 	"devDependencies": {
 		"prettier": "^2.0.5",
